App/app-1-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-1-svc
spec:
  selector:
    app: app-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
