App/app-2-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-2-svc
spec:
  selector:
    app: app-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
