App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo-app-1.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: app-1-svc
            port:
              number: 80
        
  - host: demo-app-2.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: app-2-svc
            port:
              number: 80
